ensure charts fit in on small screens

--- a/client/src/assets/styles/City.css
+++ b/client/src/assets/styles/City.css
@@ -29,6 +29,7 @@
 .chart-wrapper{
 	margin: auto;
 	width: fit-content;
+	max-width: 95vw;
 	height: 30rem;
 	display: grid;
 	place-content: center;
@@ -39,4 +40,10 @@
 .city-divider{
 	height: 100vh;
 	width: 90vw;
+}
+
+@media (max-width: 450px) {
+	.chart-wrapper>*{
+		max-width: 95vw;
+	}
 }
